[package]
name = "hfs_nfd"
version = "1.0.0"
authors = ["Tatsunori Uchino <tats.u@live.jp>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tats-u/rust-hfs-nfd/"
description = "Handle Apple's unique NFD-like Unicode normalization, which is used in HFS+, in Rust."
categories = ["encoding", "text-processing"]
keywords = ["hfs", "apple", "encoding", "unicode", "normalization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
thiserror = "1.0.20"
lazy_static = "1.1.1"
hashbrown = "0.3"